# server/src/routes/index.ts
@@ -3,6 +3,8 @@ import authRouter from "./auth.route";
 import userRouter from "./user.route";
 import slotRouter from "./slot.route";
 import slotRequestsRouter from "./slot-requests";
+import adminDashboardRouter from "./admin-dahboard.route";
+import userDashboardRouter from "./user-dahboard.route";
 
 const router = Router()
 
@@ -38,4 +40,22 @@ router.use("/request-slot", slotRequestsRouter
         }] 
     */
 )
+router.use("/admin", adminDashboardRouter
+    /*
+        #swagger.tags = ['admin-dashboard']
+        #swagger.security = [{
+                "bearerAuth": []
+        }] 
+    */
+)
+router.use("/user", userDashboardRouter
+    /*
+        #swagger.tags = ['user-dashboard']
+        #swagger.security = [{
+                "bearerAuth": []
+        }] 
+    */
+)
+
+
 export default router
