# server/src/routes/slot.route.ts
@@ -12,6 +12,7 @@ slotRouter.post('/', validationMiddleware(CreateSlotDto),slotController.createSl
 slotRouter.patch('/:id',validationMiddleware(UpdateSlotDto), slotController.updateSlot);
 slotRouter.delete('/:id', slotController.deleteSlot);
 slotRouter.post('/assign', slotController.assignSlot);
+slotRouter.post('/deassign', slotController.deassignSlot);
 slotRouter.get('/', slotController.getAllSlots);
 
 export default slotRouter;
